initiatives first commit

--- a/src/App.css
+++ b/src/App.css
@@ -61,3 +61,12 @@
   pointer-events: none;
   z-index: 999;
 }
+
+.transit {
+  @apply transition-colors;
+}
+
+button:hover {
+  @apply cursor-pointer 
+}
+
