add landing page

--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,14 @@
   @apply bg-white
 }
 
+.previewLabel p {
+  @apply font-popMd;
+}
+
+.previewLabel p span {
+  @apply font-popMd text-allGray;
+}
+
 
 @font-face {
   font-family: 'Poppins-Light';
