--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,20 @@
 @import "tailwindcss";
 
+.animate-pulse {
+  animation: pulse 1.5s infinite;
+}
 
+@keyframes pulse {
+
+  0%,
+  100% {
+    opacity: 0.7;
+  }
+
+  50% {
+    opacity: 1;
+  }
+}
 
 .logo {
   height: 6em;
